Fix crashes with context menus

Also redraw tabs better when tab color changes


BUG: 492465